[gd_scene load_steps=4 format=3 uid="uid://dbiydrgaundb6"]

[ext_resource type="Script" uid="uid://bj070xcn3qtoy" path="res://Scripts/hud.gd" id="1_cevek"]

[sub_resource type="InputEventAction" id="InputEventAction_cevek"]
action = &"start"

[sub_resource type="Shortcut" id="Shortcut_3quw2"]
events = [SubResource("InputEventAction_cevek")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_cevek")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 108.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "0"

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.5
offset_top = -162.0
offset_right = 173.5
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.465099, 0.545549, 0.623828, 1)
theme_override_font_sizes/font_size = 64
text = "Flappy Bird"

[node name="Button" type="Button" parent="."]
offset_left = 168.0
offset_top = 424.0
offset_right = 267.0
offset_bottom = 487.0
theme_override_font_sizes/font_size = 40
shortcut = SubResource("Shortcut_3quw2")
text = "start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="pressed" from="Button" to="." method="button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="message_timer_timeout"]
